Apply Stimulus controller and token editing features from commits a156e00 and e4fb392

--- a/app/views/access_tokens/index.html.erb
+++ b/app/views/access_tokens/index.html.erb
@@ -47,8 +47,10 @@
             </td>
             <td class="text-end">
               <%= link_to "Validate", access_token_validation_path(access_token),
-                          class: "text-primary text-decoration-none me-3",
+                          class: "text-decoration-none me-3",
                           data: { turbo_method: :post } %>
+              <%= link_to "Replace", edit_access_token_path(access_token),
+                          class: "text-decoration-none me-3" %>
               <%= link_to "Delete", access_token_path(access_token),
                           class: "text-danger text-decoration-none",
                           data: {
