--- a/app/views/feeds/_form.html.erb
+++ b/app/views/feeds/_form.html.erb
@@ -29,7 +29,8 @@
     <%= form.label :access_token_id, "Access Token", class: "form-label font-weight-bold" %>
     <%= form.select :access_token_id, options_for_select(access_token_options, feed.access_token_id), 
                     { prompt: "Choose access token..." }, 
-                    { class: "form-select", data: { action: "change->feed-form#tokenChanged", feed_form_target: "tokenSelect" } } %>
+                    { class: "form-select", 
+                      data: { action: "change->feed-form#loadGroups" } } %>
     <div class="form-text">Select the Freefeed access token to use for posting</div>
     <div class="invalid-feedback">Please select an access token.</div>
     
@@ -43,13 +44,12 @@
 
   <div class="mb-4">
     <%= form.label :target_group, "Target Group", class: "form-label font-weight-bold" %>
-    <%= form.select :target_group, options_for_select([], feed.target_group), 
-                    { prompt: "Choose target group..." }, 
-                    { class: "form-select", data: { feed_form_target: "groupSelect" }, disabled: true } %>
-    <div class="form-text">Select the Freefeed group where posts will be published</div>
-    <div class="invalid-feedback">Please select a target group.</div>
-    <div data-feed-form-target="groupLoading" class="text-muted mt-1" style="display: none;">
-      <small>Loading groups...</small>
+    <div id="group-select-wrapper">
+      <%= form.select :target_group, options_for_select([], feed.target_group), 
+                      { prompt: "Choose target group..." }, 
+                      { class: "form-select", disabled: true } %>
+      <div class="form-text">Select the Freefeed group where posts will be published</div>
+      <div class="invalid-feedback">Please select a target group.</div>
     </div>
   </div>
 
