--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -29,7 +29,7 @@
       <span class="btn btn-outline-secondary disabled" title="Cannot enable without <%= missing_parts.join(' and ') %>">Enable</span>
     <% end %>
     
-    <%= link_to "Edit", edit_feed_path(@feed), class: "btn btn-outline-primary" %>
+    <%= link_to "Edit", edit_feed_path(@feed), class: "btn btn-outline-secondary" %>
     <%= link_to "Delete", @feed, data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this feed?" }, class: "btn btn-outline-danger" %>
   </div>
 </div>
