--- a/app/views/access_token_groups/index.turbo_stream.erb
+++ b/app/views/access_token_groups/index.turbo_stream.erb
@@ -8,7 +8,7 @@
       <% @managed_groups.each do |group| %>
         <% display_name = group[:screen_name].present? ? "#{group[:screen_name]} (#{group[:username]})" : group[:username] %>
         <% display_name += " 🔒" if group[:is_private] %>
-        <option value="<%= group[:username] %>"><%= display_name %></option>
+        <option value="<%= group[:username] %>" <%= 'selected' if @selected_group == group[:username] %>><%= display_name %></option>
       <% end %>
     </select>
     <div class="form-text" data-groups-target="helpText">
