--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -20,7 +20,7 @@
               <tr>
                 <td>
                   <%= link_to feed, class: "text-decoration-none" do %>
-                    <strong><%= feed.name %></strong>
+                    <%= feed.name %>
                   <% end %>
                 </td>
                 <td>
