--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -44,7 +44,7 @@
                     <%= button_to "Preview", feed_previews_path,
                         params: { url: feed.url, feed_profile_name: feed.feed_profile.name },
                         method: :post,
-                        class: "btn btn-sm btn-outline-info",
+                        class: "btn btn-sm btn-outline-secondary",
                         title: "Generate feed preview" %>
                   <% end %>
                 </td>
