--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -34,7 +34,7 @@
       <%= button_to "Preview", feed_previews_path,
           params: { url: @feed.url, feed_profile_name: @feed.feed_profile.name },
           method: :post,
-          class: "btn btn-outline-info" %>
+          class: "btn btn-outline-secondary" %>
     <% end %>
 
     <%= link_to "Edit", edit_feed_path(@feed), class: "btn btn-outline-secondary" %>
