Fix Preview button redirects on Feeds pages

--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -45,7 +45,8 @@
                         params: { url: feed.url, feed_profile_name: feed.feed_profile.name },
                         method: :post,
                         class: "btn btn-sm btn-outline-secondary",
-                        title: "Generate feed preview" %>
+                        title: "Generate feed preview",
+                        data: { turbo: false } %>
                   <% end %>
                 </td>
               </tr>
